# human-in-the-loop-data-labeler

./: CLAUDE-merge2main-workflow.md  CLAUDE.md  Progress_Feature_PRD.md  README.md  Review_Summary_Feature_Design.md  config.yaml  label_sentences.py  pyproject.toml  sentence_similarity.json  tasks.md
.claude/: settings.local.json
.claude/commands/: issue.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/workflows/: ci.yml  commitlint.yml
docs/: doc_tech-spec.md  help-menu-prd.md  lab_instructor-manual.md  pedagogical_critique.md  research.md  tech-spec.md  user-manual.md
inputs/: sentence_classifier.json
logs/: log_20251029_211226.json  log_20251029_211317.json  log_20251029_211428.json  log_20251029_212936.json  log_20251029_212957.json  log_20251029_214114.json  log_20251029_214328.json
outputs/: sentence_classifier_HUMAN.json
reports/: report_20251023_142138.txt  report_20251023_142140.txt  report_20251023_142207.txt  report_20251029_211226.txt  report_20251029_211317.txt  report_20251029_211428.txt  report_20251029_211547.txt  report_20251029_212936.txt  report_20251029_212957.txt  report_20251029_214043.txt  report_20251029_214046.txt  report_20251029_214114.txt  report_20251029_214328.txt
scripts/: seed_issues.sh
src/: label_sentences.py
src/hil/: cli.py  config.py  constants.py  io_utils.py  logging_utils.py  merge.py  metrics.py  paths.py  reporting.py  resume.py  text_utils.py  validation.py
src/utils/: util_edit_json.py  util_human_assignments.py  util_metaanalysis.py  (+2 more)
(+2 files in other folders)
